src/styles/global.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

@custom-variant dark (&:where(.dark, .dark *));

html {
  scrollbar-gutter: stable;
}

@theme {
  --breakpoint-*: initial;
  --breakpoint-desktop: 50rem;
  --font-mono: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
}

@custom-variant mobile {
  @media screen and (max-width: calc(50rem - 1px)) {
    @slot;
  }
}

@theme {
  --color-primary: var(--color-blue-900);
  --color-primary-hover: var(--color-blue-800);
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-primary: var(--color-amber-500);
    --color-primary-hover: var(--color-amber-400);
  }
}

body, html {
  @apply transition-colors;
}

.prose {
  counter-reset: figure;

  pre.astro-code {
    @apply my-0 rounded-tr-none bg-transparent! p-4 whitespace-pre-wrap dark:border-none;
  }

  .snippet-wrapper {
    @apply rounded-sm border border-solid border-slate-400 dark:bg-[#24292e];
  }

  :not(pre) > code {
    @apply bg-slate-100 break-words text-blue-900 dark:bg-[#24273a] dark:text-blue-300;

    &:after,
    &:before {
      content: unset;
    }
  }
}

.content {
  @apply prose dark:prose-invert mx-auto;
}

@media (prefers-color-scheme: light) {
  .snippet-wrapper {
    @apply bg-slate-100/40;
  }
}

@media (prefers-color-scheme: dark) {
  .astro-code,
  .astro-code span {
    @apply transition;

    color: var(--shiki-dark) !important;
    background-color: var(--shiki-dark-bg) !important;
    /* Optional, if you also want font styles */
    font-style: var(--shiki-dark-font-style) !important;
    font-weight: var(--shiki-dark-font-weight) !important;
    text-decoration: var(--shiki-dark-text-decoration) !important;
  }
}

figure {
  counter-increment: figure;
  @apply my-2 text-center;

  img {
    max-width: 90%;
    max-height: 60vh;
    margin-inline: auto;
  }

  figcaption {
    @apply my-2;

    &::before {
      content: "Fig. " counter(figure) ": ";
    }

    &:lang(zh) {
      &::before {
        content: "圖" counter(figure, trad-chinese-informal) "：";
      }
    }
  }
}

.bordered-figure {
  img {
    border: 1px solid #999;
  }
}

.snippet-wrapper {
  @apply relative;
}

